// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`teleport/components/Invite should render form with token requirement when auth2fatype is on 1`] = `
.c3 {
  box-sizing: border-box;
  padding: 40px;
  flex: 3;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c12 {
  box-sizing: border-box;
  padding: 40px;
  background-color: #1C254D;
  flex: 1;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 100%;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #2C3A73;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c14 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c14:hover,
.c14:focus {
  background: #222C59;
}

.c1 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  width: 720px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  opacity: 0.4;
}

.c8:read-only {
  cursor: not-allowed;
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c0 {
  display: block;
  outline: none;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  max-width: 200px;
  max-height: 120px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
  text-align: center;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  word-break: break-all;
  margin: 0px;
  margin-bottom: 16px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c2 {
  box-sizing: border-box;
  display: flex;
}

.c9 {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
}

<div>
  <img
    class="c0"
    src="file_stub"
  />
  <form
    class="c1"
    width="720px"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          color="light"
        >
          Welcome to Teleport
        </div>
        <div
          class="c5"
        >
          john@example.com
        </div>
        <div
          class="c6"
        >
          <label
            class="c7"
            font-size="0"
          >
            Password
          </label>
          <input
            autocomplete="off"
            class="c8"
            color="text.onLight"
            placeholder="Password"
            type="password"
            value=""
          />
        </div>
        <div
          class="c6"
        >
          <label
            class="c7"
            font-size="0"
          >
            Confirm Password
          </label>
          <input
            autocomplete="off"
            class="c8"
            color="text.onLight"
            placeholder="Confirm Password"
            type="password"
            value=""
          />
        </div>
        <div
          class="c9"
        >
          <div
            class="c10"
            width="50%"
          >
            <label
              class="c7"
              font-size="0"
            >
              two-factor token
            </label>
            <input
              autocomplete="off"
              class="c8"
              color="text.onLight"
              placeholder="123 456"
              type="text"
              value=""
            />
          </div>
        </div>
        <button
          class="c11"
          kind="primary"
          width="100%"
        >
          Create Account
        </button>
      </div>
      <div
        class="c12"
      >
        <div>
          <div
            class="c13"
          >
            Scan the bar code with Google Authenticator to generate a two-factor token.
          </div>
          <img
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcgAAAHIEAAAAAC/Wvl1AAAJV0lEQVR4nOzdsW4jORZA0fbC///LXowVTFIWmqAefUtzTrDJeEtltS+YPDx+fn39ASL+99svAPzr85//+fj47df4ycr5ff1bXD9h/2f3vcenTf0LrTzh2tnvd9/jfZ2QECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgI+fz5P50dOz870rT/u3VH0VZ+dv+32B9mW1H41vc9e18nJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp6Mzl0rjCkV9stNjYytvG9hkOzs+F5nxO3vrL+vExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSHLo3M8nB1bOztItv9pU8N3+59W54SEEEFCiCAhRJAQIkgIESSECBJCBAkhgoQQQULIG43OvcdOs7NDZ9cKQ3L7o4n3HKhzQkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIWR5dO5uA0lT42Vnnzu1427/Hfaf0B2H+42/dSckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCnozOTQ1mTdnfLzd1UenZcbjumF3hZ691/tadkBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPkenbvbJrlrZwez9t9h39khubPvcPY763BCQoggIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5OPrq3FJ6LWpS0L3nzD1PUxdatp936l3uNZ9swcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQkYvbN3f8FW4SPPs1aErule+Fi6u7Xr2PTghIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQ8jF5geV/b1Tq7Ja8qecW9vedvVi1s4vOCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJDl0bnCoNOUs/vaCjv5pv7d9jfUrTy3MGb3qt/CCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJAnF7ZeK1zFWbgA9ezPrji7HW7F1PfQHai7Zusc3IQgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5Hvr3NTw0oqzI3nda1GvFS65feffbZ+tc/CGBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSFPRudWnL189OwQ177uOxQGFqeeULhEeP3NnJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5vrC1cLXlylDU2R13+084O1h47exut8K1viumBgvXn+CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyMfqWFdhO9yUV126+Xc/u/8OK+52Ke/KE/adHXm0dQ5uQpAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZHTu7KjU3a58LexKu3Z2QO09LnedYusc3JogIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhZHnr3A+PGdppdvYJ+wq76M5+k1MDliu6G/XWOSEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDy+eclQ1z7g0P7G+qmRqWmhu9WfuPCpr53VtiPaOsc5AgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn/+T91NZ/tP2B9buzY1QrjvbtfOrpgafPuNPXtOSAgRJIQIEkIECSGChBBBQoggIUSQECJICBEkhHyPznV2bv3dz147O+g0NV5WGFub+nvY36jX/Xu4tv4bOyEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZOvcvpUxpf2RpsJY1bWpa2f3P23f2VG/qUtup76z9Sc4ISFEkBAiSAgRJIQIEkIECSGChBBBQoggIUSQELI8Ojc1KlXYZjd1mefUtbN3GzecGt87+/3uf9o1W+cgR5AQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyPTp3dlyrMII19Q5TQ1wr9sfA7vZvPLXVb2pI7hknJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp5snfuNnVt/94SzV5IWLnfdf0JhoG7f2b/JFa96ByckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn4e+Tm7I2xFYbdbYYPa1BNWFEbRrp39Hl71Dk5ICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSELF/YOmV/09nUvraz9rfDXetu6iu8w9Snrf9uTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ82Tr3w//hZteBvvM+vLtt1Fv5tMLw3bWpa4gfP+uEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLWucKOsKnhu6kxu8IVqiufdnbccF/3r2SdExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGfr3nM1GWpZwe+zm4v23d2f9/+O+x/v1NPKFwl++CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLoXGEo6m5jdlNb3N5jb92KwuWus+/ghIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjH11fjQtF93QG199gD173q9D2+3wcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQj7udknpn8Ehrv19Yt1Pu3Z2i9vZ8b2zI4+v+h6ckBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPm+sPXs1q4V1wNJ++NlZ6282f4w28oTCpfcFnYe7n8Pr/rWnZAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5/Pk/nd1Hd3a8rKCw7+/sHrizQ3LXpj7tVc91QkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIeTJ6Ny1qctSu87+xvvby1Z20Z21/y/f/Y1fNRbohIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FzX1IjbynOnriQtvMOK7vewb2rn4eMJTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIS80ejc1IWtZy+CvdtOvmtTg3pTY3b772DrHLwhQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FxhtGvlHaY2yV1beW7hCtV93d1uUz879WkPTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ8GZ3rjnbtD76d3X92ber60v0xsClnB9/OsnUO3pAgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5KMwdgQ8OCEhRJAQ8v8AAAD//1QuL6EmJFBiAAAAAElFTkSuQmCC"
            style="border: 8px solid;"
            width="152"
          />
          <a
            class="c14 c15"
            href="https://support.google.com/accounts/answer/1066447?co=GENIE.Platform%3DiOS&hl=en&oco=0"
            kind="secondary"
            rel="noreferrer"
            target="_blank"
            width="100%"
          >
            Download Google Authenticator
          </a>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`teleport/components/Invite should render form with token requirement when auth2fatype is optional 1`] = `
.c3 {
  box-sizing: border-box;
  padding: 40px;
  flex: 3;
}

.c6 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
  margin-bottom: 24px;
  width: 50%;
}

.c12 {
  box-sizing: border-box;
  padding: 40px;
  background-color: #1C254D;
  flex: 1;
  border-top-right-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c11 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 40px;
  font-size: 12px;
  padding: 0px 40px;
  margin-top: 16px;
  width: 100%;
}

.c11:active {
  opacity: 0.56;
}

.c11:hover,
.c11:focus {
  background: #651FFF;
}

.c11:active {
  background: #354AA4;
}

.c11:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #222C59;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 100%;
}

.c15:active {
  opacity: 0.56;
}

.c15:hover,
.c15:focus {
  background: #2C3A73;
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c14 {
  color: #03a9f4;
  font-weight: normal;
  background: none;
  text-decoration: underline;
  text-transform: none;
  padding: 0 8px;
}

.c14:hover,
.c14:focus {
  background: #222C59;
}

.c1 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  width: 720px;
  background-color: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c8 {
  appearance: none;
  border: none;
  border-radius: 4px;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  box-sizing: border-box;
  display: block;
  height: 40px;
  font-size: 16px;
  padding: 0 16px;
  outline: none;
  width: 100%;
  color: #324148;
  background-color: #FFFFFF;
}

.c8::-ms-clear {
  display: none;
}

.c8::placeholder {
  opacity: 0.4;
}

.c8:read-only {
  cursor: not-allowed;
}

.c7 {
  color: #FFFFFF;
  display: block;
  font-size: 11px;
  font-weight: 500;
  text-transform: uppercase;
  width: 100%;
  margin-bottom: 4px;
}

.c0 {
  display: block;
  outline: none;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  max-width: 200px;
  max-height: 120px;
}

.c4 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  color: #FFFFFF;
  text-align: center;
}

.c5 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 18px;
  line-height: 32px;
  word-break: break-all;
  margin: 0px;
  margin-bottom: 16px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
  margin-bottom: 16px;
}

.c2 {
  box-sizing: border-box;
  display: flex;
}

.c9 {
  box-sizing: border-box;
  display: flex;
  flex-direction: row;
}

<div>
  <img
    class="c0"
    src="file_stub"
  />
  <form
    class="c1"
    width="720px"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          color="light"
        >
          Welcome to Teleport
        </div>
        <div
          class="c5"
        >
          john@example.com
        </div>
        <div
          class="c6"
        >
          <label
            class="c7"
            font-size="0"
          >
            Password
          </label>
          <input
            autocomplete="off"
            class="c8"
            color="text.onLight"
            placeholder="Password"
            type="password"
            value=""
          />
        </div>
        <div
          class="c6"
        >
          <label
            class="c7"
            font-size="0"
          >
            Confirm Password
          </label>
          <input
            autocomplete="off"
            class="c8"
            color="text.onLight"
            placeholder="Confirm Password"
            type="password"
            value=""
          />
        </div>
        <div
          class="c9"
        >
          <div
            class="c10"
            width="50%"
          >
            <label
              class="c7"
              font-size="0"
            >
              two-factor token
            </label>
            <input
              autocomplete="off"
              class="c8"
              color="text.onLight"
              placeholder="123 456"
              type="text"
              value=""
            />
          </div>
        </div>
        <button
          class="c11"
          kind="primary"
          width="100%"
        >
          Create Account
        </button>
      </div>
      <div
        class="c12"
      >
        <div>
          <div
            class="c13"
          >
            Scan the bar code with Google Authenticator to generate a two-factor token.
          </div>
          <img
            src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAcgAAAHIEAAAAAC/Wvl1AAAJV0lEQVR4nOzdsW4jORZA0fbC///LXowVTFIWmqAefUtzTrDJeEtltS+YPDx+fn39ASL+99svAPzr85//+fj47df4ycr5ff1bXD9h/2f3vcenTf0LrTzh2tnvd9/jfZ2QECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgI+fz5P50dOz870rT/u3VH0VZ+dv+32B9mW1H41vc9e18nJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp6Mzl0rjCkV9stNjYytvG9hkOzs+F5nxO3vrL+vExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSHLo3M8nB1bOztItv9pU8N3+59W54SEEEFCiCAhRJAQIkgIESSECBJCBAkhgoQQQULIG43OvcdOs7NDZ9cKQ3L7o4n3HKhzQkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIWR5dO5uA0lT42Vnnzu1427/Hfaf0B2H+42/dSckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCnozOTQ1mTdnfLzd1UenZcbjumF3hZ691/tadkBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPkenbvbJrlrZwez9t9h39khubPvcPY763BCQoggIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5OPrq3FJ6LWpS0L3nzD1PUxdatp936l3uNZ9swcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQkYvbN3f8FW4SPPs1aErule+Fi6u7Xr2PTghIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhRJAQ8jF5geV/b1Tq7Ja8qecW9vedvVi1s4vOCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJDl0bnCoNOUs/vaCjv5pv7d9jfUrTy3MGb3qt/CCQkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGChJAnF7ZeK1zFWbgA9ezPrji7HW7F1PfQHai7Zusc3IQgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5Hvr3NTw0oqzI3nda1GvFS65feffbZ+tc/CGBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSFPRudWnL189OwQ177uOxQGFqeeULhEeP3NnJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5vrC1cLXlylDU2R13+084O1h47exut8K1viumBgvXn+CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyMfqWFdhO9yUV126+Xc/u/8OK+52Ke/KE/adHXm0dQ5uQpAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZHTu7KjU3a58LexKu3Z2QO09LnedYusc3JogIUSQECJICBEkhAgSQgQJIYKEEEFCiCAhZHnr3A+PGdppdvYJ+wq76M5+k1MDliu6G/XWOSEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDy+eclQ1z7g0P7G+qmRqWmhu9WfuPCpr53VtiPaOsc5AgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn/+T91NZ/tP2B9buzY1QrjvbtfOrpgafPuNPXtOSAgRJIQIEkIECSGChBBBQoggIUSQECJICBEkhHyPznV2bv3dz147O+g0NV5WGFub+nvY36jX/Xu4tv4bOyEhRJAQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyZOvcvpUxpf2RpsJY1bWpa2f3P23f2VG/qUtup76z9Sc4ISFEkBAiSAgRJIQIEkIECSGChBBBQoggIUSQELI8Ojc1KlXYZjd1mefUtbN3GzecGt87+/3uf9o1W+cgR5AQIkgIESSECBJCBAkhgoQQQUKIICFEkBDyPTp3dlyrMII19Q5TQ1wr9sfA7vZvPLXVb2pI7hknJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQp5snfuNnVt/94SzV5IWLnfdf0JhoG7f2b/JFa96ByckhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSECBJCPn4e+Tm7I2xFYbdbYYPa1BNWFEbRrp39Hl71Dk5ICBEkhAgSQgQJIYKEEEFCiCAhRJAQIkgIESSELF/YOmV/09nUvraz9rfDXetu6iu8w9Snrf9uTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ82Tr3w//hZteBvvM+vLtt1Fv5tMLw3bWpa4gfP+uEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLWucKOsKnhu6kxu8IVqiufdnbccF/3r2SdExJCBAkhgoQQQUKIICFEkBAiSAgRJIQIEkIECSGfr3nM1GWpZwe+zm4v23d2f9/+O+x/v1NPKFwl++CEhBBBQoggIUSQECJICBEkhAgSQgQJIYKEEEFCyPLoXGEo6m5jdlNb3N5jb92KwuWus+/ghIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjH11fjQtF93QG199gD173q9D2+3wcnJIQIEkIECSGChBBBQoggIUSQECJICBEkhAgSQj7udknpn8Ehrv19Yt1Pu3Z2i9vZ8b2zI4+v+h6ckBAiSAgRJIQIEkIECSGChBBBQoggIUSQECJICPm+sPXs1q4V1wNJ++NlZ6282f4w28oTCpfcFnYe7n8Pr/rWnZAQIkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAj5/Pk/nd1Hd3a8rKCw7+/sHrizQ3LXpj7tVc91QkKIICFEkBAiSAgRJIQIEkIECSGChBBBQoggIeTJ6Ny1qctSu87+xvvby1Z20Z21/y/f/Y1fNRbohIQQQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FzX1IjbynOnriQtvMOK7vewb2rn4eMJTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIS80ejc1IWtZy+CvdtOvmtTg3pTY3b772DrHLwhQUKIICFEkBAiSAgRJIQIEkIECSGChBBBQsjy6FxhtGvlHaY2yV1beW7hCtV93d1uUz879WkPTkgIESSECBJCBAkhgoQQQUKIICFEkBAiSAgRJIQ8GZ3rjnbtD76d3X92ber60v0xsClnB9/OsnUO3pAgIUSQECJICBEkhAgSQgQJIYKEEEFCiCAh5KMwdgQ8OCEhRJAQ8v8AAAD//1QuL6EmJFBiAAAAAElFTkSuQmCC"
            style="border: 8px solid;"
            width="152"
          />
          <a
            class="c14 c15"
            href="https://support.google.com/accounts/answer/1066447?co=GENIE.Platform%3DiOS&hl=en&oco=0"
            kind="secondary"
            rel="noreferrer"
            target="_blank"
            width="100%"
          >
            Download Google Authenticator
          </a>
        </div>
      </div>
    </div>
  </form>
</div>
`;

exports[`teleport/components/Invite should render new recovery tokens screen 1`] = `
.c5 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c10 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 16px;
  width: 100%;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #651FFF;
}

.c18:active {
  background: #354AA4;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c3 {
  box-sizing: border-box;
  max-width: 1200px;
  min-width: 704px;
  margin-left: auto;
  margin-right: auto;
  padding: 0px;
  background-color: #222C59;
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c0 {
  display: block;
  outline: none;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  max-width: 200px;
  max-height: 120px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  font-weight: 500;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 8px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
  margin-bottom: 8px;
  color: rgba(255,255,255,0.56);
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 18px;
  margin: 0px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  font-weight: 700;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 16px;
  margin: 0px;
}

.c2 {
  box-sizing: border-box;
  max-width: 1200px;
  min-width: 704px;
  margin-left: auto;
  margin-right: auto;
  padding: 0px;
  background-color: #222C59;
  border-radius: 8px;
  overflow: hidden;
  display: flex;
  flex-wrap: wrap;
}

.c4 {
  box-sizing: border-box;
  min-width: 704px;
  padding: 40px;
  background-color: #222C59;
  flex: 4;
  display: flex;
  flex-direction: column;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 40px;
  padding-bottom: 24px;
  padding-left: 16px;
  padding-right: 8px;
  padding-top: 8px;
  background-color: #111B48;
  border: 2px solid;
  border-radius: 8px;
  border-color: #651FFF;
  display: flex;
  justify-content: space-between;
}

.c15 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c19 {
  box-sizing: border-box;
  min-width: 400px;
  padding: 40px;
  background-color: #1C254D;
  flex: 2;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
}

@media print {
  .c1 .no-print {
    display: none;
  }
}

<div>
  <img
    class="c0"
    src="file_stub"
  />
  <div
    class="c1"
  >
    <div
      class="c2 sc-AxirZ c3"
      overflow="hidden"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            font-weight="500"
          >
            New Backup & Recovery Tokens
          </div>
          <div
            class="c7"
          >
            Please
             
            <span
              class="c8"
            >
              save these account recovery tokens in a safe offline place
            </span>
            .
          </div>
          <div
            class="c9"
          >
            You can use each token once if you lose your second factor authenticator or password.
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
            color="text.secondary"
          >
            RECOVERY TOKENS (
            3
             TOTAL)
          </div>
          <div
            class="c12"
          >
            <div
              class="c13"
            >
              <div
                class="c14"
                font-size="4"
                style="font-family: mono; white-space: pre-wrap;"
              >
                tele-pawing-impose-grunge-charger-gradation-hunk-balmy-overuse

tele-voter-agreeing-challenge-mockup-illicitly-spiffy-anyplace-guileless

tele-mold-unfitted-outcome-bountiful-mom-tasty-payback-passing
              </div>
            </div>
            <div
              class="c15 no-print"
            >
              <button
                class="c16"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                COPY
              </button>
              <button
                class="c17"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                PRINT
              </button>
            </div>
          </div>
          <button
            class="c18 no-print"
            kind="primary"
            width="100%"
          >
            <div
              class="c14"
              font-size="4"
            >
              I HAVE SAVED MY RECOVERY TOKENS - CONTINUE
            </div>
          </button>
        </div>
      </div>
      <div
        class="c19 no-print"
      >
        <div
          class="c5"
        >
          <div
            class="c20"
            font-weight="700"
          >
            Why do I need these tokens?
          </div>
          <div
            class="c21"
            font-size="3"
          >
            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero error quae aspernatur pariatur tenetur facilis iste sit provident iure officiis!
          </div>
        </div>
        <div
          class="c5"
        >
          <div
            class="c20"
            font-weight="700"
          >
            How long do the tokens last for?
          </div>
          <div
            class="c21"
            font-size="3"
          >
            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe id labore debitis excepturi illum ab maiores possimus dolorum, natus quas?
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c20"
            font-weight="700"
          >
            What about my old tokens?
          </div>
          <div
            class="c21"
            font-size="3"
          >
            Your old tokens are no longer valid, please replace them with the new ones.
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`teleport/components/Invite should render recovery tokens screen 1`] = `
.c5 {
  box-sizing: border-box;
  margin-bottom: 32px;
}

.c10 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  margin-top: 8px;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 8px;
}

.c17:active {
  opacity: 0.56;
}

.c17:hover,
.c17:focus {
  background: #651FFF;
}

.c17:active {
  background: #354AA4;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 16px;
  width: 100%;
}

.c18:active {
  opacity: 0.56;
}

.c18:hover,
.c18:focus {
  background: #651FFF;
}

.c18:active {
  background: #354AA4;
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c3 {
  box-sizing: border-box;
  max-width: 1200px;
  min-width: 704px;
  margin-left: auto;
  margin-right: auto;
  padding: 0px;
  background-color: #222C59;
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-radius: 8px;
}

.c0 {
  display: block;
  outline: none;
  margin-left: auto;
  margin-right: auto;
  margin-top: 40px;
  margin-bottom: 40px;
  max-width: 200px;
  max-height: 120px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  font-weight: 500;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
  margin-bottom: 8px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  margin: 0px;
  margin-bottom: 8px;
  color: rgba(255,255,255,0.56);
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 18px;
  margin: 0px;
}

.c20 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
  margin: 0px;
  margin-bottom: 16px;
  font-weight: 700;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 16px;
  margin: 0px;
}

.c2 {
  box-sizing: border-box;
  max-width: 1200px;
  min-width: 704px;
  margin-left: auto;
  margin-right: auto;
  padding: 0px;
  background-color: #222C59;
  border-radius: 8px;
  overflow: hidden;
  display: flex;
  flex-wrap: wrap;
}

.c4 {
  box-sizing: border-box;
  min-width: 704px;
  padding: 40px;
  background-color: #222C59;
  flex: 4;
  display: flex;
  flex-direction: column;
}

.c12 {
  box-sizing: border-box;
  margin-bottom: 40px;
  padding-bottom: 24px;
  padding-left: 16px;
  padding-right: 8px;
  padding-top: 8px;
  background-color: #111B48;
  border: 2px solid;
  border-radius: 8px;
  border-color: #651FFF;
  display: flex;
  justify-content: space-between;
}

.c15 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
}

.c19 {
  box-sizing: border-box;
  min-width: 400px;
  padding: 40px;
  background-color: #1C254D;
  flex: 2;
  display: flex;
  flex-direction: column;
}

.c1 {
  box-sizing: border-box;
}

@media print {
  .c1 .no-print {
    display: none;
  }
}

<div>
  <img
    class="c0"
    src="file_stub"
  />
  <div
    class="c1"
  >
    <div
      class="c2 sc-AxirZ c3"
      overflow="hidden"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <div
            class="c6"
            font-weight="500"
          >
            Backup & Recovery Tokens
          </div>
          <div
            class="c7"
          >
            Please
             
            <span
              class="c8"
            >
              save these account recovery tokens in a safe offline place
            </span>
            .
          </div>
          <div
            class="c9"
          >
            You can use each token once if you lose your second factor authenticator or password.
          </div>
        </div>
        <div
          class="c10"
        >
          <div
            class="c11"
            color="text.secondary"
          >
            RECOVERY TOKENS (
            3
             TOTAL)
          </div>
          <div
            class="c12"
          >
            <div
              class="c13"
            >
              <div
                class="c14"
                font-size="4"
                style="font-family: mono; white-space: pre-wrap;"
              >
                tele-pawing-impose-grunge-charger-gradation-hunk-balmy-overuse

tele-voter-agreeing-challenge-mockup-illicitly-spiffy-anyplace-guileless

tele-mold-unfitted-outcome-bountiful-mom-tasty-payback-passing
              </div>
            </div>
            <div
              class="c15 no-print"
            >
              <button
                class="c16"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                COPY
              </button>
              <button
                class="c17"
                kind="primary"
                style="max-width: 48px; width: 100%; padding: 4px 8px; min-height: 10px; font-size: 10px;"
              >
                PRINT
              </button>
            </div>
          </div>
          <button
            class="c18 no-print"
            kind="primary"
            width="100%"
          >
            <div
              class="c14"
              font-size="4"
            >
              I HAVE SAVED MY RECOVERY TOKENS - CONTINUE
            </div>
          </button>
        </div>
      </div>
      <div
        class="c19 no-print"
      >
        <div
          class="c5"
        >
          <div
            class="c20"
            font-weight="700"
          >
            Why do I need these tokens?
          </div>
          <div
            class="c21"
            font-size="3"
          >
            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Libero error quae aspernatur pariatur tenetur facilis iste sit provident iure officiis!
          </div>
        </div>
        <div
          class="c5"
        >
          <div
            class="c20"
            font-weight="700"
          >
            How long do the tokens last for?
          </div>
          <div
            class="c21"
            font-size="3"
          >
            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe id labore debitis excepturi illum ab maiores possimus dolorum, natus quas?
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
